--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 
 body {
-  font-family: 'Pretendard', Arial, sans-serif;
+  font-family: 'Pretendard', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6, p, span {
